--- a/tpFinal_POO2/.classpath
+++ b/tpFinal_POO2/.classpath
@@ -6,5 +6,21 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Zanahoria Asesina/Documents/mockito-core-5.14.2.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Zanahoria Asesina/Documents/net.bytebuddy.byte-buddy-agent_1.15.7.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Zanahoria Asesina/Documents/byte-buddy-1.15.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
