--- a/tpFinal_POO2/.classpath
+++ b/tpFinal_POO2/.classpath
@@ -12,17 +12,17 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Pc/Downloads/byte-buddy-1.15.7.jar">
+	<classpathentry kind="lib" path="C:/Users/Valen/Desktop/mock/byte-buddy-1.15.7.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Pc/Downloads/net.bytebuddy.byte-buddy-agent_1.15.7.jar">
+	<classpathentry kind="lib" path="C:/Users/Valen/Desktop/mock/mockito-core-5.14.2.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Pc/Downloads/mockito-core-5.14.2.jar">
+	<classpathentry kind="lib" path="C:/Users/Valen/Desktop/mock/net.bytebuddy.byte-buddy-agent_1.15.7.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
