--- a/tpFinal_POO2/.classpath
+++ b/tpFinal_POO2/.classpath
@@ -2,23 +2,27 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="test"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Users/emiliadiaz/eclipse-workspace/tpIntegrador/TPFinal-POO2/tpFinal_POO2/libs/byte-buddy-1.15.7.jar">
+	<classpathentry kind="lib" path="C:/Users/Pc/OneDrive/Desktop/TPFinal-POO2/tpFinal_POO2/libs/byte-buddy-1.15.7.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Users/emiliadiaz/eclipse-workspace/tpIntegrador/TPFinal-POO2/tpFinal_POO2/libs/mockito-core-5.14.2.jar">
+	<classpathentry kind="lib" path="C:/Users/Pc/OneDrive/Desktop/TPFinal-POO2/tpFinal_POO2/libs/mockito-core-5.14.2.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/Users/emiliadiaz/eclipse-workspace/tpIntegrador/TPFinal-POO2/tpFinal_POO2/libs/net.bytebuddy.byte-buddy-agent_1.15.7.jar">
+	<classpathentry kind="lib" path="C:/Users/Pc/OneDrive/Desktop/TPFinal-POO2/tpFinal_POO2/libs/net.bytebuddy.byte-buddy-agent_1.15.7.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
