--- a/tpFinal_POO2/.classpath
+++ b/tpFinal_POO2/.classpath
@@ -12,17 +12,17 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Pc/OneDrive/Desktop/TPFinal-POO2/tpFinal_POO2/libs/byte-buddy-1.15.7.jar">
+	<classpathentry kind="lib" path="/Users/emiliadiaz/eclipse-workspace/tpIntegrador/TPFinal-POO2/tpFinal_POO2/libs/byte-buddy-1.15.7.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Pc/OneDrive/Desktop/TPFinal-POO2/tpFinal_POO2/libs/mockito-core-5.14.2.jar">
+	<classpathentry kind="lib" path="/Users/emiliadiaz/eclipse-workspace/tpIntegrador/TPFinal-POO2/tpFinal_POO2/libs/mockito-core-5.14.2.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Pc/OneDrive/Desktop/TPFinal-POO2/tpFinal_POO2/libs/net.bytebuddy.byte-buddy-agent_1.15.7.jar">
+	<classpathentry kind="lib" path="/Users/emiliadiaz/eclipse-workspace/tpIntegrador/TPFinal-POO2/tpFinal_POO2/libs/net.bytebuddy.byte-buddy-agent_1.15.7.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
